# Fastcheck_Automation

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  PROGRESS.md  README.md  TEST_REPORT.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/worker/: CLAUDE.md  package.json  pyproject.toml
apps/worker/fastcheck_worker/: __init__.py  __main__.py  _contracts_gen.py  config.py  contracts.py  runner.py  ws_client.py
apps/worker/fastcheck_worker/browser/: _fake_browser.py  adapter.py  cdp_forward.py  cookies.py  page_source.py
apps/worker/fastcheck_worker/detectors/: __init__.py  base.py  facebook.py  html_view.py  tiktok.py  twitter.py  youtube.py
apps/worker/fastcheck_worker/login/: __init__.py  base.py  cookie_login.py  drission_page.py  execute.py  forms.py  google_login.py  hotmail_otp.py  info_login.py  x_userpass_login.py
apps/worker/fastcheck_worker/process/: kill.py  monitor.py
apps/worker/scripts/: check_totp.py  e2e_real_gemlogin.py  e2e_verify_profile_config.py
apps/worker/tests/: fixture_server.py  test_cdp_forward.py  test_command_idempotency.py  test_concurrency.py  test_contract_parity.py  test_contracts.py  test_gemlogin_adapter.py  test_golden_platforms.py  test_golden_tiktok.py  test_hotmail_otp.py  test_login.py  test_login_cookie_guard.py  test_login_execute.py  test_login_guard.py  test_login_userpass.py  test_page_not_rendered.py  test_process_hygiene.py  test_runner_throttle.py  test_vote_engine.py
apps/worker/tests/fixtures/: account_notfound.html  captcha.html  dead_404.html  login_wall.html  missing_selector.html  profile_live.html  rate_limited.html  slow.html  soft404_200.html  video_notfound.html
apps/worker/tests/fixtures/facebook/: captcha.html  dead_404.html  group_live.html  live.html  login_wall.html  missing_selector.html  page_live.html  reel_dead.html  reel_live.html  soft404_200.html
apps/worker/tests/fixtures/twitter/: captcha.html  dead_404.html  live.html  login_wall.html  missing_selector.html  profile_live.html  soft404_200.html
(+85 files in other folders)
